# blink-arm-ls00

./: .gitignore  .gitmodules  CMakeLists.txt  blink.c
cmake/: arm-none-eabi-gcc.cmake  xc32.cmake
dfp/: Microchip.PIC32CM-LS_DFP.sha1  package.content
dfp/PIC32CM-LS00/hwtools/sdm/: sdmICD4.xml  sdmICD5.xml  sdmICE4.xml
dfp/PIC32CM-LS00/include/: component-version.h
dfp/PIC32CM-LS00/keil/debug/: PIC32CMLS00.dbgconf
dfp/PIC32CM-LS00/svd/: PIC32CM1216LS00032.svd  PIC32CM1216LS00048.svd  PIC32CM2532LS00048.svd  PIC32CM2532LS00064.svd  PIC32CM2532LS00100.svd  PIC32CM5164LS00048.svd  PIC32CM5164LS00064.svd  PIC32CM5164LS00100.svd
dfp/PIC32CM-LS00/xc32/PIC32CM1216LS00032/: startup_pic32cm1216ls00032.c
dfp/PIC32CM-LS00/xc32/PIC32CM1216LS00048/: startup_pic32cm1216ls00048.c
dfp/PIC32CM-LS60/include/: component-version.h
dfp/PIC32CM-LS60/svd/: PIC32CM5164LS60048.svd  PIC32CM5164LS60064.svd  PIC32CM5164LS60100.svd
dfp/scripts/: icd4_cortex-m23.py  j-link_cortex-m23.py
